[gd_scene load_steps=18 format=3 uid="uid://clkcf3a1qxv67"]

[ext_resource type="Theme" uid="uid://duscod7gw58fs" path="res://theming/default.tres" id="1_4norm"]
[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_x2l4x"]
[ext_resource type="FontFile" uid="uid://bwfrsquh0ifih" path="res://theming/DotGothic16/DotGothic16-Regular.ttf" id="2_lgnyb"]
[ext_resource type="Texture2D" uid="uid://bv06t4pnwyoqe" path="res://main_menu/assets/buttons/play.png" id="4_nkw84"]
[ext_resource type="Texture2D" uid="uid://chx4217ayv2vn" path="res://main_menu/assets/buttons/play_selected.png" id="5_m2jkh"]
[ext_resource type="Script" path="res://main_menu/campaign_ui.gd" id="6_7tc3p"]
[ext_resource type="Texture2D" uid="uid://7c3tdmgth2he" path="res://main_menu/assets/spinning_jeralds/Jerald_spinning.png" id="6_70p0v"]
[ext_resource type="Texture2D" uid="uid://djfnvcwgdn8jr" path="res://main_menu/assets/buttons/arrow_normal.png" id="6_pkw8l"]
[ext_resource type="Texture2D" uid="uid://dmhruk2lnnt7x" path="res://main_menu/assets/buttons/arrow_hover.png" id="7_gjhv2"]
[ext_resource type="Texture2D" uid="uid://cd4oharpsgyrw" path="res://main_menu/assets/buttons/back_normal.png" id="8_wm2k5"]
[ext_resource type="Texture2D" uid="uid://cgsnfqj18rr3q" path="res://main_menu/assets/buttons/back_selected.png" id="9_41l30"]

[sub_resource type="Animation" id="Animation_ai4fr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/main_ui/play:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/main_ui/title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_tad5r"]
resource_name = "idle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/main_ui/play:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.349066, 0.349066]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/main_ui/title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 68), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5jhic"]
_data = {
"RESET": SubResource("Animation_ai4fr"),
"idle": SubResource("Animation_tad5r")
}

[sub_resource type="Animation" id="Animation_auadq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jerald_animation/JeraldSpinning:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(110, 569)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("jerald_animation/JeraldSpinning:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("jerald_animation/JeraldSpinning:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("jerald_animation/JeraldSpinning:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 10)]
}

[sub_resource type="Animation" id="Animation_pmcx7"]
resource_name = "jumping"
length = 40.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jerald_animation/JeraldSpinning:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9, 2.4, 2.9, 6.6, 7.3, 13.4, 13.6, 21.5, 23, 28, 28.3, 28.6, 28.9, 29.2, 29.5, 30.5, 31, 40),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-102, 567), Vector2(-102, 567), Vector2(114, 456), Vector2(220, 568), Vector2(220, 568), Vector2(563, 567), Vector2(563, 567), Vector2(781, 563), Vector2(781, 563), Vector2(1030, 563), Vector2(1030, 563), Vector2(1138, 435), Vector2(1266, 568), Vector2(1266, 568), Vector2(1338, 460), Vector2(1452, 568), Vector2(1452, 568), Vector2(1441, 766), Vector2(1441, 766)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("jerald_animation/JeraldSpinning:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6.6, 7.3, 40),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 6.28319, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("jerald_animation/JeraldSpinning:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 12.6, 13.4, 13.6, 14.3, 40),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -1.56905, -1.56905, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("jerald_animation/JeraldSpinning:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 20, 21.5, 23, 40),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 10), Vector2(10, 10), Vector2(50, 10), Vector2(10, 10), Vector2(10, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt2uw"]
_data = {
"RESET": SubResource("Animation_auadq"),
"jumping": SubResource("Animation_pmcx7")
}

[node name="main_menu" type="Node2D"]
script = ExtResource("1_x2l4x")
metadata/_edit_vertical_guides_ = [-12.0, 0.0, -96.0]
metadata/_edit_horizontal_guides_ = [247.0, 66.0, 64.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="main_ui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="CanvasLayer/main_ui"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 148.0
grow_horizontal = 2
theme = ExtResource("1_4norm")
theme_override_font_sizes/font_size = 100
text = "Jerald Land"
horizontal_alignment = 1
vertical_alignment = 1

[node name="edit" type="Button" parent="CanvasLayer/main_ui"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 200.0
offset_top = 63.0
offset_right = -200.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4norm")
theme_override_fonts/font = ExtResource("2_lgnyb")
theme_override_font_sizes/font_size = 50
text = "Editor"

[node name="play" type="TextureButton" parent="CanvasLayer/main_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(16, 16)
texture_normal = ExtResource("4_nkw84")
texture_hover = ExtResource("5_m2jkh")

[node name="animation" type="AnimationPlayer" parent="CanvasLayer/main_ui"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_5jhic")
}

[node name="campaign_ui" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_7tc3p")

[node name="outline" type="ColorRect" parent="CanvasLayer/campaign_ui"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 300)

[node name="inline" type="ColorRect" parent="CanvasLayer/campaign_ui/outline"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 300)
color = Color(0, 0, 0, 1)

[node name="title" type="Label" parent="CanvasLayer/campaign_ui/outline/inline"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 121.0
grow_horizontal = 2
theme = ExtResource("1_4norm")
theme_override_font_sizes/font_size = 50
text = "Level Name Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="TextureButton" parent="CanvasLayer/campaign_ui/outline/inline"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -84.0
offset_right = -52.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
texture_normal = ExtResource("4_nkw84")
texture_hover = ExtResource("5_m2jkh")

[node name="right" type="TextureButton" parent="CanvasLayer/campaign_ui/outline/inline"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -8.0
offset_right = -50.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(8, 8)
texture_normal = ExtResource("6_pkw8l")
texture_hover = ExtResource("7_gjhv2")

[node name="left" type="TextureButton" parent="CanvasLayer/campaign_ui/outline/inline"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -8.0
offset_right = 66.0
offset_bottom = 8.0
grow_vertical = 2
scale = Vector2(-5, 5)
pivot_offset = Vector2(8, 8)
texture_normal = ExtResource("6_pkw8l")
texture_hover = ExtResource("7_gjhv2")

[node name="back" type="TextureButton" parent="CanvasLayer/campaign_ui/outline/inline"]
layout_mode = 1
offset_left = 62.0
offset_top = 38.0
offset_right = 86.0
offset_bottom = 62.0
scale = Vector2(5, 5)
pivot_offset = Vector2(12, 12)
texture_normal = ExtResource("8_wm2k5")
texture_hover = ExtResource("9_41l30")

[node name="jerald_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nt2uw")
}

[node name="JeraldSpinning" type="Sprite2D" parent="jerald_animation"]
visible = false
position = Vector2(110, 569)
scale = Vector2(10, 10)
texture = ExtResource("6_70p0v")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="pressed" from="CanvasLayer/main_ui/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="CanvasLayer/main_ui/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/campaign_ui/outline/inline/play" to="CanvasLayer/campaign_ui" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/campaign_ui/outline/inline/right" to="CanvasLayer/campaign_ui" method="_on_right_pressed"]
[connection signal="pressed" from="CanvasLayer/campaign_ui/outline/inline/left" to="CanvasLayer/campaign_ui" method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/campaign_ui/outline/inline/back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
